--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="styles.31d6cfe0d16ae931b73c.css"></head>
   <body>
     <app-root></app-root>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="runtime.8d9042433c656e5564df.js" defer></script><script src="polyfills.fc77fd5b581fd9483160.js" defer></script><script src="main.88267112bd8976711346.js" defer></script>
+  <script src="runtime.659de80e1821bb559fa0.js" defer></script><script src="polyfills.2c662f70f19e6ce2f505.js" defer></script><script src="main.1dfd6f7246fd42717f7b.js" defer></script>
 
 </body></html>
